// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyfulProvider supports overriding default copy 1`] = `
<DocumentFragment>
  <span>
    c0pyful
  </span>
  <span>
    y35, 3v3n dyn4m1c v4lu35, l1k3 7h15 numb3r: 4 4nd 7h15 57r1n6: heydoc.
  </span>
</DocumentFragment>
`;

exports[`useCopy returns strings and interpolates values with provided context 1`] = `
<DocumentFragment>
  <span>
    Copyful
  </span>
  <span>
    Yes, even dynamic values, like this number: 4 and this string: heydoc.
  </span>
</DocumentFragment>
`;
